# ct-lotto-anchor

./: Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
programs/ct-anchor-lotto/: Cargo.toml
programs/ct-anchor-lotto/src/: account_size.rs  lib.rs  lotto_enum.rs  lotto_util.rs
programs/ct-lotto-anchor/: Cargo.toml
programs/ct-lotto-anchor/src/: account_instruction.rs  account_struct.rs  lib.rs
tests/: ct-lotto-anchor.ts
