[package]
name = "ct-anchor-lotto"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ct_anchor_lotto"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
switchboard-on-demand = "0.4.7"
num-bigint = "0.4"
solana-security-txt = "1.1.2"
