[package]
name = "ct-lotto-lotto"
version = "1.0.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ct_lotto_anchor"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.32.1"
switchboard-on-demand = "0.11.3"
num-bigint = "0.4.6"
solana-security-txt = "1.1.2"
